[gd_scene load_steps=5 format=3 uid="uid://xhum3mrlq23e"]

[ext_resource type="FontFile" uid="uid://cbop378hlk53u" path="res://font/Kaph_Font_1_20/Web Open Font Format (.woff)/Kaph-Italic.woff" id="1_doep7"]
[ext_resource type="Script" path="res://scenes/pause_menu.gd" id="1_pa7cq"]
[ext_resource type="Shader" path="res://assets/Shader/menu_scene.gdshader" id="2_i1ywr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_30squ"]
shader = ExtResource("2_i1ywr")
shader_parameter/amount = 1.0

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pa7cq")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_30squ")
layout_mode = 0
offset_left = -1736.0
offset_top = -946.0
offset_right = -1696.0
offset_bottom = -906.0
scale = Vector2(71.8011, 39.0657)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 326.0
offset_bottom = 206.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Continue" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
tooltip_text = "asdd"
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("1_doep7")
theme_override_font_sizes/font_size = 50
text = "CONTINUE"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
tooltip_text = "asdd"
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("1_doep7")
theme_override_font_sizes/font_size = 50
text = "Options
"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
tooltip_text = "asdd"
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("1_doep7")
theme_override_font_sizes/font_size = 50
text = "Exit
"

[node name="Pause Sounds" type="AudioStreamPlayer2D" parent="."]

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
